{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "270d21ea-1a0d-4ec9-a3ee-83c963319d97",
            "actions": [
                {
                    "name": "RotateToLeft",
                    "type": "Button",
                    "id": "ea3b7e9a-1331-4adb-abf2-a6f876fb54ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateToRight",
                    "type": "Button",
                    "id": "19fc7f8a-a433-4b74-98f9-84317f0213b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "e9a732a5-9d4b-4008-aab7-ce08ae4ec494",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ffad20f-c391-45bd-b474-e8a2f3f6f9ae",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97aecca0-70b8-4c69-b3d1-d955473a9858",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7064978c-3418-4d14-a37a-d4704565ab85",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}